// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ layout / Vertical ] #Vertical when 'Vertical' Default is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="spacer vertical is-playground"
    style="height: 0px;"
  />
</DocumentFragment>
`;

exports[`[ layout / Vertical ] #Vertical when 'Vertical' Sizes is mounted should render 1`] = `
<DocumentFragment>
  <div
    class="spacer vertical is-playground"
    style="height: 0px;"
  />
  <div
    class="spacer vertical is-playground"
    style="height: 5px;"
  />
  <div
    class="spacer vertical is-playground"
    style="height: 15px;"
  />
  <div
    class="spacer vertical is-playground"
    style="height: 20px;"
  />
  <div
    class="spacer vertical is-playground"
    style="height: 40px;"
  />
</DocumentFragment>
`;
